Revert "staging layer created"
This reverts commit e6351793b22314b088e56255a7b43d2145b51560.

--- a/profiles.yml
+++ b/profiles.yml
@@ -4,7 +4,7 @@ ae_project:
       dataset: dbt_berti
       job_execution_timeout_seconds: 300
       job_retries: 1
-      location: US
+      location: EU
       method: oauth
       priority: interactive
       project: analytics-394014
