--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -33,8 +33,5 @@ clean-targets:         # directories to be removed by `dbt clean`
 models:
   ae_project:
     # Config indicated by + and applies to all files under models/example/
-    staging:
-      +enabled: true
-      +materialized: table
-      +schema: stg_northwind
-
+    example:
+      +materialized: view
